methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:17: error: type mismatch;
 found   : Unit
 required: Boolean
  avance(7)
        ^